[package]
name = "tracing-server"
version = "0.1.0"
authors = ["Nirvan Tyagi <nirvan.tyagi@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
tracing = { version = "0.1", path = "../tracing" }

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["json", "redis_pool"]
